# gen3_rpc

./: Cargo.toml
gen3_rpc/: Cargo.toml  build.rs
gen3_rpc/schema/: gen3rpc.capnp
gen3_rpc/src/: client.rs  lib.rs  server.rs  utils.rs
mock/: Cargo.toml
mock/src/: main.rs  mockclient.rs  mockserver.rs
pyo3server/: Cargo.toml  run.sh
pyo3server/src/: main.rs
reading_rainbow/: Cargo.toml
reading_rainbow/src/: gui.rs  main.rs  status.rs  worker.rs
rynq/: Cargo.toml
rynq/src/: lib.rs
schema/: gen3rpc.capnp
src/: client.rs  lib.rs  mock.rs  mockclient.rs
