[package]
name = "pyo3server"
version = "0.1.0"
edition = "2024"

[dependencies]
capnp = "0.20.5"
capnp-rpc = "0.20.3"
env_logger = "0.11.7"
futures = "0.3.31"
futures-io = "0.3.31"
gen3_rpc = { path = "../gen3_rpc" }
log = "0.4.26"
num = "0.4.3"
num-complex = "0.4.6"
numpy = "0.24.0"
pyo3 = { version = "0.24.1", features = ["auto-initialize"] }
tokio = { version = "1.43.1", features = ["full", "macros", "net", "rt", "tokio-macros"] }
tokio-util = { version = "0.7.13", features = ["net", "compat"] }
